--- a/test/interface/__snapshots__/plugin.test.ts.yml
+++ b/test/interface/__snapshots__/plugin.test.ts.yml
@@ -1,10 +1,10 @@
-Plugin Method / addComponents nested selectors / css / 0: |-
+Tools / addComponents nested selectors / css / 0: |-
   .card.compact .card-body {
     font-size: .875rem;
     line-height: 1.25rem;
     padding: 1rem;
   }
-Plugin Method / addComponents order / css / 0: |-
+Tools / addComponents order / css / 0: |-
   [data-theme=dark] {
     --p: 259 94% 61%;
   }
@@ -16,7 +16,7 @@ Plugin Method / addComponents order / css / 0: |-
   [data-theme=light] {
     --p: 259 94% 51%;
   }
-Plugin Method / addComponents with attribute selectors / css / 0: |-
+Tools / addComponents with attribute selectors / css / 0: |-
   btn-disabled, .btn[disabled] {
     --tw-bg-opacity: 1;
     --tw-bg-opacity: 0.2;
@@ -26,7 +26,7 @@ Plugin Method / addComponents with attribute selectors / css / 0: |-
     --tw-text-opacity: 0.2;
     color: hsla(var(--bc,215 28% 17%)/var(--tw-text-opacity));
   }
-Plugin Method / variants not cleared when plugin loaded / css / 0: |-
+Tools / variants not cleared when plugin loaded / css / 0: |-
   .variant .variant\:text-black {
     --tw-text-opacity: 1;
     color: rgba(0, 0, 0, var(--tw-text-opacity));
