--- a/test/processor/__snapshots__/utilities.test.ts.yml
+++ b/test/processor/__snapshots__/utilities.test.ts.yml
@@ -784,7 +784,10 @@ Tools / content utilities / css / 0: |-
   .after\:content-\[attr\(value\)\]::after {
     content: attr(value);
   }
-Tools / content utilities false / css / 0: ''
+  .content {
+    content: "";
+  }
+Tools / content utilities startsWith symbol / css / 0: ''
 Tools / fill-none and stroke-none is wrong / css / 0: |-
   .fill-none {
     fill: none;
@@ -883,6 +886,33 @@ Tools / grid template test / grid template / 0: |-
   .grid-rows-4 {
     grid-template-rows: repeat(4, minmax(0, 1fr));
   }
+Tools / inset exact match / css / 0: |-
+  .inset-auto {
+    top: auto;
+    right: auto;
+    bottom: auto;
+    left: auto;
+  }
+  .inset-4 {
+    top: 1rem;
+    right: 1rem;
+    bottom: 1rem;
+    left: 1rem;
+  }
+  .inset-x-13 {
+    right: 3.25rem;
+    left: 3.25rem;
+  }
+  .top-1\/3 {
+    top: 33.333333%;
+  }
+Tools / lineHeight exact match / css / 0: |-
+  .leading-4 {
+    line-height: 1rem;
+  }
+  .leading-\[1\.25rem\] {
+    line-height: 1.25rem;
+  }
 Tools / list style type / css / 0: |-
   .list-disc {
     list-style-type: disc;
@@ -923,6 +953,13 @@ Tools / more color opacity group utilities / css / 0: |-
   .text-stroke-green-500\/50 {
     --tw-text-stroke-opacity: 0.5;
     -webkit-text-stroke-color: rgba(16, 185, 129, var(--tw-text-stroke-opacity));
+  }
+Tools / padding exact match / css / 0: |-
+  .p-4 {
+    padding: 1rem;
+  }
+  .p-12\.5 {
+    padding: 3.125rem;
   }
 Tools / prespective and perspective origin / css / 0: |-
   .perspect-none {
@@ -1305,4 +1342,17 @@ Tools / wrap container / small container / 0: |-
         max-width: 1536px;
       }
     }
+  }
+Tools / zIndex exact match / css / 0: |-
+  .z-auto {
+    z-index: auto;
+  }
+  .z-20 {
+    z-index: 20;
+  }
+  .-z-10 {
+    z-index: -10;
+  }
+  .z-\$var-name {
+    z-index: var(--var-name);
   }
