--- a/package.json
+++ b/package.json
@@ -95,7 +95,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/voorjaar/windicss.git"
+    "url": "https://github.com/windicss/windicss.git"
   },
   "keywords": [
     "windicss",
@@ -108,7 +108,7 @@
   },
   "author": "Veritas Raven",
   "license": "MIT",
-  "homepage": "https://github.com/voorjaar/windicss",
+  "homepage": "https://github.com/windicss/windicss",
   "devDependencies": {
     "@rollup/plugin-commonjs": "^18.0.0",
     "@rollup/plugin-json": "^4.1.0",
