--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -6947,6 +6947,9 @@ Tools / completions / static / 0: |-
     "prose-purple",
     "prose-pink",
     "aspect-none",
+    "aspect-auto",
+    "aspect-square",
+    "aspect-video",
     "line-clamp-none",
     "blur-0",
     "blur",
