feat: add '.decoration-x' utility classes (#601)

--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -963,6 +963,33 @@ Tools / with container utility / css / 0: |-
       max-width: 1536px;
     }
   }
+Tools / with decoration utility / css / 0: |-
+  [decoration~="solid"] {
+    -webkit-text-decoration-style: solid;
+    text-decoration-style: solid;
+  }
+  [decoration~="double"] {
+    -webkit-text-decoration-style: double;
+    text-decoration-style: double;
+  }
+  [decoration~="dotted"] {
+    -webkit-text-decoration-style: dotted;
+    text-decoration-style: dotted;
+  }
+  [decoration~="wavy"] {
+    -webkit-text-decoration-style: wavy;
+    text-decoration-style: wavy;
+  }
+  [decoration~="green-500"] {
+    --tw-text-decoration-opacity: 1;
+    -webkit-text-decoration-color: rgba(16, 185, 129, var(--tw-text-decoration-opacity));
+    text-decoration-color: rgba(16, 185, 129, var(--tw-text-decoration-opacity));
+  }
+  [decoration~="gray-500"] {
+    --tw-text-decoration-opacity: 1;
+    -webkit-text-decoration-color: rgba(107, 114, 128, var(--tw-text-decoration-opacity));
+    text-decoration-color: rgba(107, 114, 128, var(--tw-text-decoration-opacity));
+  }
 Tools / with display utility / css / 0: |-
   [display~="block"] {
     display: block;
@@ -2343,6 +2370,10 @@ Tools / with text utility / css / 0: |-
     -webkit-text-decoration-line: underline;
     text-decoration-line: underline;
   }
+  [text~="overline"] {
+    -webkit-text-decoration-line: overline;
+    text-decoration-line: overline;
+  }
   [text~="line-through"] {
     -webkit-text-decoration-line: line-through;
     text-decoration-line: line-through;
@@ -2701,6 +2732,10 @@ Tools / with underline utility / css / 0: |-
   [underline~="dotted"] {
     -webkit-text-decoration-style: dotted;
     text-decoration-style: dotted;
+  }
+  [underline~="wavy"] {
+    -webkit-text-decoration-style: wavy;
+    text-decoration-style: wavy;
   }
   [underline~="auto"] {
     text-decoration-thickness: auto;
