--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -100,6 +100,7 @@ Tools / get corePlugins / list / 0: |-
     "textDecorationColor",
     "textDecorationOpacity",
     "textDecorationOffset",
+    "textDecorationThickness",
     "textDecoration",
     "textIndent",
     "textStrokeColor",
@@ -274,6 +275,7 @@ Tools / get corePlugins / list3 / 2: |-
     "textDecorationColor",
     "textDecorationOpacity",
     "textDecorationOffset",
+    "textDecorationThickness",
     "textDecoration",
     "textIndent",
     "textStrokeColor",
@@ -405,6 +407,7 @@ Tools / resolve dynamic utilities / with-plugins / 1: |-
     "stroke",
     "text",
     "tracking",
+    "decoration",
     "underline",
     "w",
     "z",
@@ -494,6 +497,7 @@ Tools / resolve dynamic utilities / without-plugins / 0: |-
     "stroke",
     "text",
     "tracking",
+    "decoration",
     "underline",
     "w",
     "z",
