--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -2,6 +2,7 @@ Tools / completions / color / 2: |-
   [
     "text-transparent",
     "text-current",
+    "text-inherit",
     "text-light-50",
     "text-light-100",
     "text-light-200",
@@ -256,6 +257,7 @@ Tools / completions / color / 2: |-
     "text-blue-gray-900",
     "placeholder-transparent",
     "placeholder-current",
+    "placeholder-inherit",
     "placeholder-light-50",
     "placeholder-light-100",
     "placeholder-light-200",
@@ -510,6 +512,7 @@ Tools / completions / color / 2: |-
     "placeholder-blue-gray-900",
     "bg-transparent",
     "bg-current",
+    "bg-inherit",
     "bg-light-50",
     "bg-light-100",
     "bg-light-200",
@@ -764,6 +767,7 @@ Tools / completions / color / 2: |-
     "bg-blue-gray-900",
     "from-transparent",
     "from-current",
+    "from-inherit",
     "from-light-50",
     "from-light-100",
     "from-light-200",
@@ -1018,6 +1022,7 @@ Tools / completions / color / 2: |-
     "from-blue-gray-900",
     "via-transparent",
     "via-current",
+    "via-inherit",
     "via-light-50",
     "via-light-100",
     "via-light-200",
@@ -1272,6 +1277,7 @@ Tools / completions / color / 2: |-
     "via-blue-gray-900",
     "to-transparent",
     "to-current",
+    "to-inherit",
     "to-light-50",
     "to-light-100",
     "to-light-200",
@@ -1526,6 +1532,7 @@ Tools / completions / color / 2: |-
     "to-blue-gray-900",
     "border-transparent",
     "border-current",
+    "border-inherit",
     "border-light-50",
     "border-light-100",
     "border-light-200",
@@ -1780,6 +1787,7 @@ Tools / completions / color / 2: |-
     "border-blue-gray-900",
     "divide-transparent",
     "divide-current",
+    "divide-inherit",
     "divide-light-50",
     "divide-light-100",
     "divide-light-200",
@@ -2034,6 +2042,7 @@ Tools / completions / color / 2: |-
     "divide-blue-gray-900",
     "ring-offset-transparent",
     "ring-offset-current",
+    "ring-offset-inherit",
     "ring-offset-light-50",
     "ring-offset-light-100",
     "ring-offset-light-200",
@@ -2288,6 +2297,7 @@ Tools / completions / color / 2: |-
     "ring-offset-blue-gray-900",
     "ring-transparent",
     "ring-current",
+    "ring-inherit",
     "ring-light-50",
     "ring-light-100",
     "ring-light-200",
@@ -2542,6 +2552,7 @@ Tools / completions / color / 2: |-
     "ring-blue-gray-900",
     "outline-transparent",
     "outline-current",
+    "outline-inherit",
     "outline-light-50",
     "outline-light-100",
     "outline-light-200",
@@ -2796,6 +2807,7 @@ Tools / completions / color / 2: |-
     "outline-blue-gray-900",
     "outline-solid-transparent",
     "outline-solid-current",
+    "outline-solid-inherit",
     "outline-solid-light-50",
     "outline-solid-light-100",
     "outline-solid-light-200",
@@ -3050,6 +3062,7 @@ Tools / completions / color / 2: |-
     "outline-solid-blue-gray-900",
     "outline-dotted-transparent",
     "outline-dotted-current",
+    "outline-dotted-inherit",
     "outline-dotted-light-50",
     "outline-dotted-light-100",
     "outline-dotted-light-200",
@@ -3304,6 +3317,7 @@ Tools / completions / color / 2: |-
     "outline-dotted-blue-gray-900",
     "fill-transparent",
     "fill-current",
+    "fill-inherit",
     "fill-light-50",
     "fill-light-100",
     "fill-light-200",
@@ -3559,6 +3573,7 @@ Tools / completions / color / 2: |-
     "fill-none",
     "stroke-transparent",
     "stroke-current",
+    "stroke-inherit",
     "stroke-light-50",
     "stroke-light-100",
     "stroke-light-200",
