feat: add '.columns-x' utility and friends classes (#606)
Co-authored-by: Anthony Fu <anthonyfu117@hotmail.com>

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -1,5 +1,6 @@
 Tools / get corePlugins / list / 0: |-
   [
+    "columns",
     "container",
     "space",
     "divideWidth",
@@ -177,6 +178,7 @@ Tools / get corePlugins / list2 / 1: |-
   ]
 Tools / get corePlugins / list3 / 2: |-
   [
+    "columns",
     "space",
     "divideWidth",
     "divideColor",
@@ -347,6 +349,7 @@ Tools / get corePlugins / list3 / 2: |-
   ]
 Tools / resolve dynamic utilities / with-plugins / 1: |-
   [
+    "columns",
     "container",
     "space",
     "divide",
@@ -437,6 +440,7 @@ Tools / resolve dynamic utilities / with-plugins / 1: |-
   ]
 Tools / resolve dynamic utilities / without-plugins / 0: |-
   [
+    "columns",
     "container",
     "space",
     "divide",
