--- a/test/utils/__snapshots__/completions.test.ts.yml
+++ b/test/utils/__snapshots__/completions.test.ts.yml
@@ -3830,6 +3830,9 @@ Tools / completions / color / 2: |-
   ]
 Tools / completions / dynamic / 1: |-
   [
+    "columns-${float}",
+    "columns-${size}",
+    "columns-${int}xl",
     "inset-${float}",
     "-inset-${float}",
     "inset-${fraction}",
@@ -4038,6 +4041,32 @@ Tools / completions / dynamic / 1: |-
   ]
 Tools / completions / static / 0: |-
   [
+    "columns-1",
+    "columns-2",
+    "columns-3",
+    "columns-4",
+    "columns-5",
+    "columns-6",
+    "columns-7",
+    "columns-8",
+    "columns-9",
+    "columns-10",
+    "columns-11",
+    "columns-12",
+    "columns-xs",
+    "columns-sm",
+    "columns-md",
+    "columns-lg",
+    "columns-xl",
+    "columns-2xl",
+    "columns-3xl",
+    "columns-4xl",
+    "columns-5xl",
+    "columns-6xl",
+    "columns-7xl",
+    "columns-auto",
+    "columns-3xs",
+    "columns-2xs",
     "container",
     "object-bottom",
     "object-center",
@@ -5778,12 +5807,22 @@ Tools / completions / static / 0: |-
     "w-72",
     "w-80",
     "w-96",
-    "w-auto",
     "w-px",
     "w-0.5",
     "w-1.5",
     "w-2.5",
     "w-3.5",
+    "w-xs",
+    "w-sm",
+    "w-md",
+    "w-lg",
+    "w-xl",
+    "w-2xl",
+    "w-3xl",
+    "w-4xl",
+    "w-5xl",
+    "w-6xl",
+    "w-7xl",
     "w-1/2",
     "w-1/3",
     "w-2/3",
@@ -5810,17 +5849,7 @@ Tools / completions / static / 0: |-
     "w-9/12",
     "w-10/12",
     "w-11/12",
-    "w-xs",
-    "w-sm",
-    "w-md",
-    "w-lg",
-    "w-xl",
-    "w-2xl",
-    "w-3xl",
-    "w-4xl",
-    "w-5xl",
-    "w-6xl",
-    "w-7xl",
+    "w-auto",
     "w-full",
     "w-min",
     "w-max",
@@ -5861,7 +5890,11 @@ Tools / completions / static / 0: |-
     "min-w-72",
     "min-w-80",
     "min-w-96",
-    "min-w-none",
+    "min-w-screen-sm",
+    "min-w-screen-md",
+    "min-w-screen-lg",
+    "min-w-screen-xl",
+    "min-w-screen-2xl",
     "min-w-px",
     "min-w-0.5",
     "min-w-1.5",
@@ -5878,16 +5911,12 @@ Tools / completions / static / 0: |-
     "min-w-5xl",
     "min-w-6xl",
     "min-w-7xl",
+    "min-w-none",
     "min-w-full",
     "min-w-min",
     "min-w-max",
     "min-w-prose",
     "min-w-screen",
-    "min-w-screen-sm",
-    "min-w-screen-md",
-    "min-w-screen-lg",
-    "min-w-screen-xl",
-    "min-w-screen-2xl",
     "max-w-0",
     "max-w-1",
     "max-w-2",
@@ -5918,7 +5947,11 @@ Tools / completions / static / 0: |-
     "max-w-72",
     "max-w-80",
     "max-w-96",
-    "max-w-none",
+    "max-w-screen-sm",
+    "max-w-screen-md",
+    "max-w-screen-lg",
+    "max-w-screen-xl",
+    "max-w-screen-2xl",
     "max-w-px",
     "max-w-0.5",
     "max-w-1.5",
@@ -5935,16 +5968,12 @@ Tools / completions / static / 0: |-
     "max-w-5xl",
     "max-w-6xl",
     "max-w-7xl",
+    "max-w-none",
     "max-w-full",
     "max-w-min",
     "max-w-max",
     "max-w-prose",
     "max-w-screen",
-    "max-w-screen-sm",
-    "max-w-screen-md",
-    "max-w-screen-lg",
-    "max-w-screen-xl",
-    "max-w-screen-2xl",
     "h-0",
     "h-1",
     "h-2",
@@ -5975,12 +6004,22 @@ Tools / completions / static / 0: |-
     "h-72",
     "h-80",
     "h-96",
-    "h-auto",
     "h-px",
     "h-0.5",
     "h-1.5",
     "h-2.5",
     "h-3.5",
+    "h-xs",
+    "h-sm",
+    "h-md",
+    "h-lg",
+    "h-xl",
+    "h-2xl",
+    "h-3xl",
+    "h-4xl",
+    "h-5xl",
+    "h-6xl",
+    "h-7xl",
     "h-1/2",
     "h-1/3",
     "h-2/3",
@@ -5996,17 +6035,7 @@ Tools / completions / static / 0: |-
     "h-3/6",
     "h-4/6",
     "h-5/6",
-    "h-xs",
-    "h-sm",
-    "h-md",
-    "h-lg",
-    "h-xl",
-    "h-2xl",
-    "h-3xl",
-    "h-4xl",
-    "h-5xl",
-    "h-6xl",
-    "h-7xl",
+    "h-auto",
     "h-full",
     "h-min",
     "h-max",
@@ -6047,7 +6076,11 @@ Tools / completions / static / 0: |-
     "min-h-72",
     "min-h-80",
     "min-h-96",
-    "min-h-none",
+    "min-h-screen-sm",
+    "min-h-screen-md",
+    "min-h-screen-lg",
+    "min-h-screen-xl",
+    "min-h-screen-2xl",
     "min-h-px",
     "min-h-0.5",
     "min-h-1.5",
@@ -6064,16 +6097,12 @@ Tools / completions / static / 0: |-
     "min-h-5xl",
     "min-h-6xl",
     "min-h-7xl",
+    "min-h-none",
     "min-h-full",
     "min-h-min",
     "min-h-max",
     "min-h-prose",
     "min-h-screen",
-    "min-h-screen-sm",
-    "min-h-screen-md",
-    "min-h-screen-lg",
-    "min-h-screen-xl",
-    "min-h-screen-2xl",
     "max-h-0",
     "max-h-1",
     "max-h-2",
@@ -6104,7 +6133,11 @@ Tools / completions / static / 0: |-
     "max-h-72",
     "max-h-80",
     "max-h-96",
-    "max-h-none",
+    "max-h-screen-sm",
+    "max-h-screen-md",
+    "max-h-screen-lg",
+    "max-h-screen-xl",
+    "max-h-screen-2xl",
     "max-h-px",
     "max-h-0.5",
     "max-h-1.5",
@@ -6121,16 +6154,12 @@ Tools / completions / static / 0: |-
     "max-h-5xl",
     "max-h-6xl",
     "max-h-7xl",
+    "max-h-none",
     "max-h-full",
     "max-h-min",
     "max-h-max",
     "max-h-prose",
     "max-h-screen",
-    "max-h-screen-sm",
-    "max-h-screen-md",
-    "max-h-screen-lg",
-    "max-h-screen-xl",
-    "max-h-screen-2xl",
     "text-xs",
     "text-sm",
     "text-base",
