--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -169,7 +169,8 @@ Tools / get corePlugins / list / 0: |-
     "backdropInvert",
     "backdropOpacity",
     "backdropSaturate",
-    "backdropSepia"
+    "backdropSepia",
+    "willChange"
   ]
 Tools / get corePlugins / list2 / 1: |-
   [
@@ -345,7 +346,8 @@ Tools / get corePlugins / list3 / 2: |-
     "backdropInvert",
     "backdropOpacity",
     "backdropSaturate",
-    "backdropSepia"
+    "backdropSepia",
+    "willChange"
   ]
 Tools / resolve dynamic utilities / with-plugins / 1: |-
   [
