feat: add '.basis-x' utility classes (#611)

--- a/test/processor/__snapshots__/resolve.test.ts.yml
+++ b/test/processor/__snapshots__/resolve.test.ts.yml
@@ -31,6 +31,7 @@ Tools / get corePlugins / list / 0: |-
     "captionSide",
     "emptyCells",
     "display",
+    "flexBasis",
     "flexDirection",
     "flexWrap",
     "placeItems",
@@ -210,6 +211,7 @@ Tools / get corePlugins / list3 / 2: |-
     "captionSide",
     "emptyCells",
     "display",
+    "flexBasis",
     "flexDirection",
     "flexWrap",
     "placeItems",
@@ -360,6 +362,7 @@ Tools / resolve dynamic utilities / with-plugins / 1: |-
     "space",
     "divide",
     "bg",
+    "basis",
     "from",
     "via",
     "to",
@@ -451,6 +454,7 @@ Tools / resolve dynamic utilities / without-plugins / 0: |-
     "space",
     "divide",
     "bg",
+    "basis",
     "from",
     "via",
     "to",
