--- a/test/processor/__snapshots__/utilities.test.ts.yml
+++ b/test/processor/__snapshots__/utilities.test.ts.yml
@@ -564,6 +564,21 @@ Tools / border width shouldn't infer / css / 0: |-
   .border-t-4 {
     border-top-width: 4px;
   }
+Tools / box shadows & box shadow color / css / 0: |-
+  .shadow-2xl {
+    --tw-shadow: 0 25px 50px -12px rgb(0 0 0/0.25);
+    --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+    -webkit-box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
+    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
+  }
+  .shadow-red-800 {
+    --tw-shadow-color: rgba(153, 27, 27, 1);
+    --tw-shadow: var(--tw-shadow-colored);
+  }
+  .shadow-red-800\/50 {
+    --tw-shadow-color: rgba(153, 27, 27, 0.5);
+    --tw-shadow: var(--tw-shadow-colored);
+  }
 Tools / caret color / css / 0: |-
   .caret-auto {
     caret-color: auto;
@@ -1056,21 +1071,6 @@ Tools / scroll-behavior / css / 0: |-
   }
   .scroll-smooth {
     scroll-behavior: smooth;
-  }
-Tools / shadow color / css / 0: |-
-  .shadow-red-800 {
-    --tw-shadow-color: rgba(153, 27, 27, 1);
-    --tw-shadow: var(--tw-shadow-colored);
-  }
-  .shadow-red-800\/50 {
-    --tw-shadow-color: rgba(153, 27, 27, 0.5);
-    --tw-shadow: var(--tw-shadow-colored);
-  }
-  .shadow-2xl {
-    --tw-shadow: 0 25px 50px -12px rgb(0 0 0/0.25);
-    --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
-    -webkit-box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
-    box-shadow: var(--tw-ring-offset-shadow,0 0 #0000),var(--tw-ring-shadow,0 0 #0000),var(--tw-shadow);
   }
 Tools / stroke svg / css / 0: |-
   .stroke-gray-200 {
