--- a/package.json
+++ b/package.json
@@ -119,10 +119,10 @@
     "@types/color-string": "^1.5.2",
     "@types/diff": "^5.0.1",
     "@types/fs-extra": "^9.0.13",
-    "@types/glob": "^7.2.0",
     "@types/jasmine": "^3.10.2",
     "@types/js-yaml": "^4.0.5",
     "@types/lodash.merge": "^4.6.6",
+    "@types/minimatch": "^3.0.5",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
     "@typescript-eslint/eslint-plugin": "^5.7.0",
@@ -136,8 +136,8 @@
     "diff": "^5.0.0",
     "domhandler": "^4.3.0",
     "eslint": "^8.4.1",
+    "fast-glob": "^3.2.7",
     "fs-extra": "^10.0.0",
-    "glob": "^7.2.0",
     "jasmine": "^3.10.0",
     "jasmine-spec-reporter": "^7.0.0",
     "js-yaml": "^4.1.0",
