--- a/test/processor/__snapshots__/attributify.test.ts.yml
+++ b/test/processor/__snapshots__/attributify.test.ts.yml
@@ -1242,6 +1242,22 @@ Tools / with flex utility / css / 0: |-
     -webkit-flex-shrink: 0;
     flex-shrink: 0;
   }
+  [flex~="gap-2"] {
+    grid-gap: 0.5rem;
+    gap: 0.5rem;
+  }
+  [flex~="gap-x-4"] {
+    -webkit-column-gap: 1rem;
+    -moz-column-gap: 1rem;
+    grid-column-gap: 1rem;
+    column-gap: 1rem;
+  }
+  [flex~="gap-y-2"] {
+    -webkit-row-gap: 0.5rem;
+    -moz-row-gap: 0.5rem;
+    grid-row-gap: 0.5rem;
+    row-gap: 0.5rem;
+  }
 Tools / with font utility / css / 0: |-
   [font~="sans"] {
     font-family: ui-sans-serif,system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,"Noto Sans",sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
